--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1853,7 +1853,7 @@ button:active,
 /* Item */
 
 .item {
-    box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0.05em 0.18em 0 rgba(0, 0, 0, 0.05);
     margin-bottom: 40px;
 }
 
@@ -2712,7 +2712,7 @@ details[open]>summary~* {
     white-space: nowrap;
     position: relative;
     -webkit-overflow-scrolling: touch;
-    padding: 0 2em 0 2em;
+    padding: 0 2em 0 0;
 }
 
 .carousel article {
@@ -2720,7 +2720,7 @@ details[open]>summary~* {
     width: 18em;
     background: #fff;
     text-align: center;
-    padding: 0 1em 3em 1em;
+    padding: 0 1em 2em 1em;
     margin: 0 2em 0 0;
     white-space: normal;
     opacity: 1.0;
@@ -2740,7 +2740,7 @@ details[open]>summary~* {
     top: 0;
     width: auto;
     margin-right: -2em;
-    margin-bottom: 3em;
+    margin-bottom: 2em;
 }
 
 .carousel article p {
