--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1703,78 +1703,6 @@ ul.icons a {
 }
 
 
-/* Form */
-
-form label {
-    display: block;
-    text-align: left;
-    margin-bottom: 0.5em;
-}
-
-form input[type="text"],
-form input[type="email"],
-form input[type="password"],
-form select,
-form textarea {
-    position: relative;
-    -webkit-appearance: none;
-    display: block;
-    border: 0;
-    outline: 0;
-    background: #fff;
-    background: rgba(255, 255, 255, 0.75);
-    width: 100%;
-    border-radius: 0.35em;
-    padding: 0.75em 1em 0.75em 1em;
-    box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
-    border: solid 1px rgba(0, 0, 0, 0.15);
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -ms-transition: all 0.35s ease-in-out;
-    transition: all 0.35s ease-in-out;
-}
-
-form input[type="text"]:focus,
-form input[type="email"]:focus,
-form input[type="password"]:focus,
-form select:focus,
-form textarea:focus {
-    box-shadow: 0 0 2px 1px #8ebebc;
-    background: #fff;
-}
-
-form input[type="text"],
-form input[type="email"],
-form input[type="password"],
-form select {
-    line-height: 1.25em;
-}
-
-form textarea {
-    min-height: 14em;
-}
-
-form ::-webkit-input-placeholder {
-    color: #555 !important;
-}
-
-form :-moz-placeholder {
-    color: #555 !important;
-}
-
-form ::-moz-placeholder {
-    color: #555 !important;
-}
-
-form :-ms-input-placeholder {
-    color: #555 !important;
-}
-
-form ::-moz-focus-inner {
-    border: 0;
-}
-
-
 /* Table */
 
 table {
@@ -1787,6 +1715,7 @@ table tbody tr:nth-child(2n+2) {
 }
 
 table td {
+    font-size: 0.8em;
     padding: 0.5em 1em 0.5em 1em;
 }
 
@@ -1810,8 +1739,6 @@ table tfoot {
 /* Button */
 
 input[type="button"],
-input[type="submit"],
-input[type="reset"],
 button,
 .button {
     position: relative;
@@ -1834,16 +1761,12 @@ button,
 }
 
 input[type="button"]:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover,
 button:hover,
 .button:hover {
     background-color: #9ececc;
 }
 
 input[type="button"]:active,
-input[type="submit"]:active,
-input[type="reset"]:active,
 button:active,
 .button:active {
     background-color: #7eaeac;
@@ -2612,8 +2535,8 @@ details[open]>summary~* {
 
 .container2 span.number span {
     position: absolute;
-    font-size: 10px;
-    left: -35px;
+    font-size: 1em;
+    left: -55px;
     font-weight: bold;
 }
 
