3번 tech skill 진행중

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2728,3 +2728,11 @@ details[open]>summary~* {
         width: 0%;
     }
 }
+
+
+/* skills */
+
+.skills>p>b {
+    font-weight: 500;
+    color: inherit;
+}
