--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1590,7 +1590,7 @@ br.clear {
 
 section,
 article {
-    margin-bottom: 3em;
+    margin-bottom: 1em;
 }
 
 section> :last-child,
@@ -2644,7 +2644,7 @@ details[open]>summary~* {
     width: 18em;
     background: #fff;
     text-align: center;
-    padding: 0 1em 2em 1em;
+    padding: 0 1em 1em 1em;
     margin: 0 2em 0 0;
     white-space: normal;
     opacity: 1.0;
@@ -2664,11 +2664,20 @@ details[open]>summary~* {
     top: 0;
     width: auto;
     margin-right: -2em;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
+}
+
+.carousel article header {
+    margin: 0.5em 0 0.5em 0;
+}
+
+.carousel article header h3 {
+    font-size: 1.3em;
 }
 
 .carousel article p {
     font-size: 0.8em;
+    line-height: 1.5em;
     text-align: center;
 }
 
