--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2450,6 +2450,10 @@ details[open]>summary~* {
     box-shadow: 1px 1px 2px gray;
 }
 
+.tpt>table {
+    margin-bottom: 0;
+}
+
 @keyframes reveal {
     from {
         opacity: 0;
@@ -2476,7 +2480,7 @@ details[open]>summary~* {
 .container2 ul li {
     position: relative;
     margin-left: 30px;
-    background-color: rgb(236, 236, 225);
+    background-color: rgb(236, 236, 219);
     padding: 14px;
     border-radius: 6px;
     /*width: 500px;*/
@@ -2752,4 +2756,14 @@ details[open]>summary~* {
 .skills>p>b {
     font-weight: 500;
     color: inherit;
+}
+
+.contact-style {
+    padding: 35px 20px 1px 20px;
+    border-radius: 5px;
+    text-align: left;
+    min-width: 300px;
+    width: 40%;
+    background-color: rgb(236, 236, 219);
+    box-shadow: 1px 1px 2px gray;
 }
