1차 피드백 완료

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2439,7 +2439,8 @@ details[open]>summary~* {
     animation: reveal 0.5s;
 }
 
-.tpt {
+.tpt,
+.tpt2 {
     font-size: 18px;
     background: rgb(236, 236, 225);
     color: #444;
@@ -2450,7 +2451,12 @@ details[open]>summary~* {
     box-shadow: 1px 1px 2px gray;
 }
 
-.tpt>table {
+.tpt2 {
+    background: rgb(181, 218, 231)
+}
+
+.tpt>table,
+.tpt2>table {
     margin-bottom: 0;
 }
 
@@ -2755,7 +2761,15 @@ details[open]>summary~* {
 
 .skills>p>b {
     font-weight: 500;
-    color: inherit;
+    color: rgba(221, 120, 109, 0.75);
+}
+
+.skills>p>i {
+    font-style: normal;
+    font-weight: 400;
+    line-height: inherit;
+    white-space: inherit;
+    color: rgb(140, 160, 218);
 }
 
 .contact-style {
