--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2055,7 +2055,7 @@ button:active,
 
 #main>section.one {
     background-color: #81918E;
-    background-image: url("../../images/banner.jpg");
+    background-image: url("../../images/intro.png");
 }
 
 #main>section.two {
