--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Nanum+Pen+Script&family=Stylish&display=swap');
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
 
@@ -2548,4 +2549,25 @@ details[open]>summary~* {
     width: 50%;
     background-color: rgb(236, 236, 219);
     box-shadow: 1px 1px 2px gray;
+}
+
+
+/* font */
+
+.nanum {
+    font-family: 'Nanum Pen Script', cursive;
+}
+
+.stylish {
+    font-family: 'Stylish', sans-serif;
+    line-height: 1.5em;
+    text-align: left;
+    margin-bottom: 0;
+}
+
+.gowun {
+    font-family: 'Gowun Dodum', sans-serif;
+    line-height: 1.5em;
+    margin-bottom: 0.5em;
+    text-align: left;
 }
