--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2515,10 +2515,14 @@ details[open]>summary~* {
 
 .about-edu>li {
     font-weight: 500;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 }
 
 .about-edu>p {
     font-weight: 400;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
     margin-left: 2em;
 }
 
